issue #1 added spotless.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
   },
   "customizations": {
     "vscode": {
-      "extensions": ["/opt/vscode-wpilib-2023.2.1.vsix", "redhat.java", "vscjava.vscode-java-debug", "vscjava.vscode-java-dependency", "ms-vscode.cpptools"]
+      "extensions": ["/opt/vscode-wpilib-2023.2.1.vsix", "redhat.java", "vscjava.vscode-java-debug", "vscjava.vscode-java-dependency", "ms-vscode.cpptools", "richardwillis.vscode-spotless-gradle"]
     }
   }
 }
