--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
   "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx2G -Xms100m -Xlog:disable",
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
+  "java.format.comments.enabled": false,
   "editor.formatOnSaveMode": "modificationsIfAvailable",
   "editor.defaultFormatter": "redhat.java"
 }
